<resources>
    <string name="app_name">Bangsa Berbagi</string>
    <string name="informasi_edukasi_sampah"><![CDATA[Informasi & Edukasi \nSampah]]></string>
    <string name="penjemputan_sampah">Penjemputan Sampah</string>
    <string name="penjualan_pupuk">Penjualan Pupuk</string>
    <string name="pengenalan_sampah">Pengenalan Sampah</string>
    <string name="jenis_jenis_n_sampah">Jenis Jenis\n Sampah</string>
    <string name="manfaat_nsampah">Manfaat\nSampah</string>
    <string name="pengolahan_nsampah">Pengolahan\nSampah</string>
    <string name="pemilahan_nsampah">Pemilahan\nSampah</string>
    <string name="dampak_sampah">Dampak Sampah</string>
    <string name="aspek_nlingkungan">Aspek\nLingkungan</string>
    <string name="aspek_nkesehatan">Aspek\nKesehatan</string>
    <string name="pemanfaatan_sampah">Pemanfaatan Sampah</string>
    <string name="membuat_npupuk">Membuat\nPupuk</string>
    <string name="kegunaan_npupuk">Kegunaan\nPupuk</string>
    <string name="jenis_content">Sampah dapat dibedakan menjadi 2 jenis :
        \n\n<b>1. Sampah padat (Anorganik)</b>
\n\n\tSampah anorganik adalah sampah yang terdiri dari bahan-bahan anorganik. Contoh bahan logam, plastik, kaca, karet, dan kaleng. Sifat sampah anorganik adalah tahan lama dan sukar membusuk.
\n\n\tSampah ini tidak mudah diuraikan oleh mikroorganisme tanah. Apabila dibuang sembarangan, sampah anorganik dapat menimbulkan pencemaran tanah.
        \n\n<b>2. Sampah Basah (Organik)</b>
\n\n\tSampah organik adalah sampah yang terdiri dari bahan-bahan organik. Sifat sampah organik tidak tahan lama dan cepat membusuk. Biasanya sampah jenis ini berasal dari makhluk hidup. Contohnya sayur-sayuran, buah-buah yang membusuk, sisa nasi, daun, dan sebagainya yang dihasilkan dari rumah.
\n\n\tSampah organik mudah diuraikan mikroorganisme tanah. Hanya saja jenis sampah akan menimbulkan bau kurang sedap jika tidak dikelola dengan baik.
</string>
    <string name="manfaat_content"><b>1. Sampah Padat (Anorganik)</b>
\n\n- Bahan Kerajinan Tangan
\n\n\tBerkaitan dengan prinsip pengolahan sampah, sampah anorganik mulai banyak dimanfaatkan sebagai bahan kerajinan tangan. Bahkan, sekolah-sekolah pun banyak yang memberikan pelatihan atau edukasi kepada murid-muridnya untuk membuat prakarya dari bahan dasar sampah.
\n\n\tTentu, hal ini menjadi terobosan baru di dunia industri kreatif agar membuat inovasi baru untuk mengurangi dampak negatif dari sampah anorganik.
\n\n- Bahan Daur Ulang
\n\n\tSeperti yang dijelaskan diatas, salah satu prinsip pengolahan sampah adalah recycle atau daur ulang. Sampah-sampah dapat diolah menjadi barang-barang yang memiliki nilai guna yang lebih tinggi.
\n\n\tSampah anorganik dapat dimanfaatkan sebagai bahan-bahan daur ulang yang tentunya bermanfaat untuk kehidupan masyarakat.
\n\n- Dapat Digunakan Kembali
\n\n\tSampah anorganik merupakan sampah yang lama terurai, penggunaan kembali sampah tentu sangat memungkinkan untuk dilakukan. Sampah-sampah rumah tangga dapat difungsikan menjadi benda lain yang sederhana. Seperti ember cat untuk bak penampungan air dan sebagainya.
\n\n- Mainan Anak
\n\n\tManfaat lain dari sampah anorganik adalah dapat dijadikan bahan mainan anak-anak. Jika kita ingin melatih kreativitas anak-anak, ajaklah mereka untuk membuat mainan sendiri dari limbah anorganik yang ada di rumah.
\n\nTidak perlu menggunakan alat yang rumit, cukup menggunakan peralatan yang ada di rumah. Selain dapat menghasilkan sesuatu, cara ini juga bermanfaat bagi tumbuh kembang anak. Harapannya, anak menjadi lebih kreatif dan lebih peduli dengan lingkungan.
\n\n- Meningkatkan Pendapatan Ekonomi
\n\n\tMendapatkan uang dari sampah, mengapa tidak? Inilah salah satu manfaat sampah yang banyak dilupakan. Padahal sampah anorganik yang diolah dengan baik bisa membantu meningkatkan pendapatan ekonomi.
\n\n\tApalagi jika seseorang berhasil membuat usaha khusus di bidang daur ulang sampah, maka lapangan pekerjaan pun akan bertambah.
\n\n\tDalam skala kecil, usaha pengepul barang bekas adalah salah satu bentuk usaha sederhana yang memberikan tambahan pemasukan uang. Sampah-sampah anorganik yang dikumpulkan kemudian dijual untuk diolah kembali menjadi barang baru yang lebih layak untuk dipasarkan.
\n\n\tTidak hanya itu, sampah bisa dijadikan mata pencaharian tetap bagi para pelaku usaha di bidang industri kreatif. Misalnya usaha daur ulang ban bekas menjadi kursi cafe yang unik.
\n\n\tLebih jauh lagi, usaha ini membutuhkan ahli di bidang pembuatan kursi, sehingga lapangan pekerjaan akan terbuka dan peluang meningkatkan pendapatan ekonomi pribadi akan lebih luas.

        \n\n<b>2. Sampah Basah (Organik)</b>
\n\n- Menjadi Pupuk Kompos
\n\n\tPupuk kompos merupakan pupuk alami untuk tanaman. Meski manfaat ini telah diketahui secara luas, nyatanya tidak banyak orang yang memanfaatkan sampah alami ini untuk pupuk kompos. Padahal pengolahan sampah organik menjadi kompos bukanlah hal sulit, hanya saja tahapannya memang harus benar.
\n\n- Dapat Diolah Menjadi Pakan Ternak
\n\n\tTidak hanya dimanfaatkan untuk pupuk kompos, sampah yang berasal dari bahan-bahan organis ini ternyata juga bisa dimanfaatkan untuk tambahan pakan ternak.
\n\n\tBiasanya hal ini diterapkan di pedesaan, para pemilik hewan ternak mencari rumput untuk memenuhi kebutuhan pakan ternak mereka. Selain itu, sisa-sisa makanan juga bisa dimanfaatkan sebagai pakan unggas, ikan, dan lainnya.
\n\n- Pembuatan Kerajinan Tangan
\n\n\tBanyak yang mengira jika pemanfaatan sampah untuk kerajinan tangan atau souvenir hanya dapat dilakukan dari sumber sampah anorganik, misalnya plastik. Padahal, sampah organik juga bisa dimanfaatkan untuk membuat kerajinan tangan yang memiliki nilai jual tinggi.
\n\n\tMisalnya batok kelapa yang diolah menjadi berbagai kerajinan tangan. Tidak hanya itu, sampah kerang-kerangan di pantai juga bisa dimanfaatkan untuk souvenir. Sisa kayu yang sudah tidak terpakai juga bisa diolah menjadi berbagai alat atau benda yang bermanfaat.
\n\n- Biogas
\n\n\tManfaat lain dari sampah organik adalah dapat dimanfaatkan menjadi biogas. Sampah dari kotoran hewan, limbah tahu, atau limbah tempe bisa dimanfaatkan untuk membuat biogas karena menghasilkan gas metana.
\n\n\tBiogas dapat dimanfaatkan untuk keperluan sehari-hari dengan pengolahan yang benar, misalnya memasak dengan kompor berbahan bakar biogas.
</string>
    <string name="nilai_ekonomi_content"><b>Nilai Ekonomi Sampah Berdasarkan Jenis Sampah</b>
\n\n\tLangkah-langkah perhitungan nilai ekonomi sampah perumahan yaitu sampah dipisahkan anorganik dan organik, sampah perumahan dipilah menurut jenis-jenis yang telah ditentukan, jumlah massa sampah yang terjual menurut jenisnya dicatat per hari, sampah dinilai kelayakannya, sampah yang layak jual ditimbang dan nilai ekonomi sampah tersebut dihitung. Berikut merupakan harga-harga yang laku dijual di Bank Sampah Rosella:
</string>
    <string name="aspek_nekonomi">Aspek\nEkonomi</string>
    <string name="nilai_ekonomi_nsampah">Nilai Ekonomi\nSampah</string>
    <string name="kreativitas_nsampah">Kreativitas\nSampah</string>
    <string name="kardus">Kardus</string>
    <string name="rp_1_100_kg">Rp 1.100/kg</string>
    <string name="koran">Koran</string>
    <string name="rp_800_kg">Rp 800/kg</string>
    <string name="kertas_putih">Kertas Putih</string>
    <string name="kertas_kulit">Kertas Kulit</string>
    <string name="rp_200_kg">Rp 200/kg</string>
    <string name="botol">Botol</string>
    <string name="rp_800_buah">Rp 800/buah</string>
    <string name="gelas_aqua">Gelas Aqua</string>
    <string name="kaleng">Kaleng</string>
    <string name="rp_8_000_kg">Rp 8.000/kg</string>
    <string name="botol_plastik_berwarna">Botol Plastik Berwarna</string>
    <string name="nama">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="catatan">Catatan</string>
    <string name="jenis_sampah">Jenis Sampah</string>
    <string name="anorganik">ANORGANIK</string>
    <string name="organik">ORGANIK</string>
    <string name="sabtu">SABTU</string>
    <string name="minggu">MINGGU</string>
    <string name="hari_jemput">Hari Jemput</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="organik_dan_anorganik">ORGANIK DAN ANORGANIK</string>
</resources>