<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.informasi.pemanfaatan.NilaiEkonomiSampahFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content_nilai_ekonomi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/nilai_ekonomi_content" />

        <GridLayout
            android:id="@+id/harga_sampah_table"
            android:background="#ddd"
            android:columnCount="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:textColor="@color/black"
                android:text="@string/kardus"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_1_100_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/koran"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_800_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/kertas_putih"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_800_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/kertas_putih"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_800_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/kertas_kulit"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_200_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/botol"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_800_buah"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/gelas_aqua"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_800_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/kaleng"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_8_000_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/botol_plastik_berwarna"
                android:layout_margin="4dp"
                android:layout_width="160dp"
                android:background="@color/white"
                android:padding="4dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/rp_800_kg"
                android:layout_margin="4dp"
                android:layout_width="100dp"
                android:background="@color/white"
                android:padding="4dp"/>
        </GridLayout>

    </LinearLayout>


</ScrollView>