<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.informasi.InformationActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_pengenalan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengenalan_sampah"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/grid_pengenalan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintStart_toStartOf="@+id/tv_pengenalan"
        app:layout_constraintTop_toBottomOf="@+id/tv_pengenalan">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_jenis"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:background="#83DEF2"
            android:text="@string/jenis_jenis_n_sampah"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_manfaat"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:background="#83DEF2"
            android:text="@string/manfaat_nsampah"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pengolahan"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:background="#83DEF2"
            android:text="@string/pengolahan_nsampah"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pemilahan"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:background="#83DEF2"
            android:text="@string/pemilahan_nsampah"/>
    </GridLayout>

    <TextView
        android:id="@+id/tv_dampak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dampak_sampah"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/grid_pengenalan"
        app:layout_constraintStart_toStartOf="@id/grid_pengenalan"
        app:layout_constraintTop_toBottomOf="@id/grid_pengenalan"/>

    <HorizontalScrollView
        android:id="@+id/hsv_dampak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fadeScrollbars="true"
        app:layout_constraintStart_toStartOf="@+id/tv_dampak"
        app:layout_constraintTop_toBottomOf="@+id/tv_dampak">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_lingkungan"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:background="#83DEF2"
                android:text="@string/aspek_nlingkungan"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_kesehatan"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:background="#83DEF2"
                android:text="@string/aspek_nkesehatan"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ekonomi"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:background="#83DEF2"
                android:text="@string/aspek_nekonomi"/>

        </GridLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_pemanfaatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pemanfaatan_sampah"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/hsv_dampak"
        app:layout_constraintStart_toStartOf="@id/hsv_dampak"
        app:layout_constraintTop_toBottomOf="@id/hsv_dampak"/>

    <HorizontalScrollView
        android:id="@+id/hsv_pemanfaatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_pemanfaatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_pemanfaatan">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_membuat_pupuk"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:background="#83DEF2"
                android:text="@string/membuat_npupuk"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_kegunaan_pupuk"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:background="#83DEF2"
                android:text="@string/kegunaan_npupuk"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_nilai_ekonomi"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:background="#83DEF2"
                android:text="@string/nilai_ekonomi_nsampah"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_kreativitas_sampah"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:background="#83DEF2"
                android:text="@string/kreativitas_nsampah"/>
        </GridLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>